Minifying + adding google analytics

--- a/hugo.toml
+++ b/hugo.toml
@@ -30,3 +30,7 @@ colorThemeSwitcher = false
 social = [
     { id = "github", url = "https://github.com/mszalewicz" }
 ]
+
+[params.GoogleAnalytics]
+enabled = true
+gtag = "G-NXW3M81BF1"
